fixade lite overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 
 html, body{
     color: #191919;
+    overflow-x: hidden;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 16px;
